# Coding-Agent

./: .pyre_configuration  pyrightconfig.json
production-coding-assistant/: .gitignore  .pyre_configuration  Launch Production Coding Assistant.cmd  README.md  forge.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
production-coding-assistant/backend/: server.py
production-coding-assistant/backend/assistant_backend/: __init__.py  config.py
production-coding-assistant/backend/assistant_backend/api/: app.py
production-coding-assistant/backend/assistant_backend/core/: models.py  (+5 more)
production-coding-assistant/config/: .env.example  app.example.json  models.example.json
production-coding-assistant/desktop/: electron.d.ts  vite.main.config.ts
production-coding-assistant/desktop/electron/: main.ts  preload.ts
production-coding-assistant/docs/: ARCHITECTURE.md  WEB_SEARCH_EXECUTION_PLAN.md
production-coding-assistant/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
production-coding-assistant/frontend/src/: App.tsx  index.css  index.css.patch.bak
production-coding-assistant/scripts/: create_shortcut.ps1  launch_app.ps1  run_backend.ps1  run_electron_make.ps1  run_electron_package.ps1  run_frontend.ps1
production-coding-assistant/templates/: calculator.py.template
production-coding-assistant/tests/: __init__.py  conftest.py  test_database.py  test_executor.py  test_filesystem_tool.py  test_orchestrator_web_search.py  test_planner.py  test_shell_tool.py  test_validation.py  test_web_search.py
(+34 files in other folders)
